src/test/testFiles/valid/popEmptyStackNeverExecutedAtRuntime.manimdsl
if (false) {
    let y = Stack<number>();
    let x = y.pop();
} else {
    let x = 0;
}