src/test/testFiles/invalid/semanticErrors/arrayInvalidTypesInInitialiserCheck.manimdsl
let x = new Array<number>(){true, false, true}